--- a/.verb.md
+++ b/.verb.md
@@ -7,11 +7,23 @@
 ## Usage
 
 ```js
-var parseGitConfig = require('{%= name %}');
+var gitConfig = require('{%= name %}');
 ```
 
-## API
-{%= apidocs("index.js") %}
+### async
+
+```js
+gitConfig(function (err, config) {
+  // do stuff with err/config
+});
+```
+
+### sync
+
+```js
+gitConfig.sync();
+
+```
 
 
 ## Run tests
