--- a/.verb.md
+++ b/.verb.md
@@ -7,22 +7,31 @@
 ## Usage
 
 ```js
-var gitConfig = require('{%= name %}');
-```
+var git = require('{%= name %}');
 
-### async
+// sync
+var config = git.sync();
 
-```js
-gitConfig(function (err, config) {
+// or async
+git(function (err, config) {
   // do stuff with err/config
 });
 ```
 
-### sync
+Config object will be something like:
 
 ```js
-gitConfig.sync();
-
+{ core:
+   { repositoryformatversion: '0',
+     filemode: true,
+     bare: false,
+     logallrefupdates: true,
+     ignorecase: true,
+     precomposeunicode: true },
+  'remote "origin"':
+   { url: 'https://github.com/jonschlinkert/parse-git-config.git',
+     fetch: '+refs/heads/*:refs/remotes/origin/*' },
+  'branch "master"': { remote: 'origin', merge: 'refs/heads/master', ... } }
 ```
 
 
