update docs: breaking changes: - now takes an options object instead of a string

--- a/.verb.md
+++ b/.verb.md
@@ -18,6 +18,19 @@ git(function (err, config) {
 });
 ```
 
+**Custom path and/or cwd**
+
+```js
+git.sync({cwd: 'foo', path: '.git/config'});
+
+// async
+git({cwd: 'foo', path: '.git/config'}, function (err, config) {
+  // do stuff 
+});
+```
+
+**Example result**
+
 Config object will be something like:
 
 ```js
