--- a/.verb.md
+++ b/.verb.md
@@ -48,16 +48,14 @@ Config object will be something like:
 ```
 
 
+## Other useful projects
+{%= related(['parse-github-url', 'parse-gitignore', 'parse-author', 'parse-authors']) %}
+
 ## Run tests
-
-Install dev dependencies:
-
-```bash
-npm i -d && npm test
-```
+{%= include("tests") %}
 
 ## Contributing
-Pull requests and stars are always welcome. For bugs and feature requests, [please create an issue]({%= bugs.url %})
+{%= include("contributing") %}
 
 ## Author
 {%= include("author") %}
