--- a/.verb.md
+++ b/.verb.md
@@ -2,6 +2,8 @@
 
 > {%= description %}
 
+## Install
+
 {%= include("install-npm", {save: true}) %}
 
 ## Usage
@@ -49,7 +51,7 @@ Config object will be something like:
 
 
 ## Other useful projects
-{%= related(['parse-github-url', 'parse-gitignore', 'parse-author', 'parse-authors']) %}
+{%= related(verb.related.list) %}
 
 ## Run tests
 {%= include("tests") %}
@@ -62,7 +64,7 @@ Config object will be something like:
 
 ## License
 {%= copyright() %}
-{%= license() %}
+{%= license %}
 
 ***
 
