--- a/.verb.md
+++ b/.verb.md
@@ -1,13 +1,13 @@
 ## Usage
 
 ```js
-var git = require('{%= name %}');
+var parse = require('{%= name %}');
 
 // sync
-var config = git.sync();
+var config = parse.sync();
 
 // or async
-git(function (err, config) {
+parse(function (err, config) {
   // do stuff with err/config
 });
 ```
@@ -15,10 +15,10 @@ git(function (err, config) {
 **Custom path and/or cwd**
 
 ```js
-git.sync({cwd: 'foo', path: '.git/config'});
+parse.sync({cwd: 'foo', path: '.git/config'});
 
 // async
-git({cwd: 'foo', path: '.git/config'}, function (err, config) {
+parse({cwd: 'foo', path: '.git/config'}, function (err, config) {
   // do stuff 
 });
 ```
@@ -39,4 +39,81 @@ Config object will be something like:
    { url: 'https://github.com/jonschlinkert/parse-git-config.git',
      fetch: '+refs/heads/*:refs/remotes/origin/*' },
   'branch "master"': { remote: 'origin', merge: 'refs/heads/master', ... } }
+```
+
+## API
+{%= apidocs('index.js') %}
+
+### .keys examples
+
+Converts ini-style keys into objects:
+
+**Example 1**
+
+```js
+var parse = require('parse-git-config');
+var config = { 
+  'foo "bar"': { doStuff: true },
+  'foo "baz"': { doStuff: true } 
+};
+
+console.log(parse.keys(config));
+```
+
+Results in:
+
+```js
+{ 
+  foo: { 
+    bar: { doStuff: true }, 
+    baz: { doStuff: true } 
+  } 
+}
+```
+
+**Example 2**
+
+```js
+var parse = require('parse-git-config');
+var config = {
+  'remote "origin"': { 
+    url: 'https://github.com/jonschlinkert/normalize-pkg.git',
+    fetch: '+refs/heads/*:refs/remotes/origin/*' 
+  },
+  'branch "master"': { 
+    remote: 'origin', 
+    merge: 'refs/heads/master' 
+  },
+  'branch "dev"': { 
+    remote: 'origin', 
+    merge: 'refs/heads/dev', 
+    rebase: true 
+  }
+};
+
+console.log(parse.keys(config));
+```
+
+Results in:
+
+```js
+{
+  remote: {
+    origin: {
+      url: 'https://github.com/jonschlinkert/normalize-pkg.git',
+      fetch: '+refs/heads/*:refs/remotes/origin/*'
+    }
+  },
+  branch: {
+    master: {
+      remote: 'origin',
+      merge: 'refs/heads/master'
+    },
+    dev: {
+      remote: 'origin',
+      merge: 'refs/heads/dev',
+      rebase: true
+    }
+  }
+}
 ```
