adds promise support

--- a/.verb.md
+++ b/.verb.md
@@ -1,10 +1,10 @@
 ## Usage
 
 ```js
-var parse = require('{%= name %}');
+const parse = require('{%= name %}');
 
 // sync
-var config = parse.sync();
+const config = parse.sync();
 
 // or async
 parse(function (err, config) {
@@ -51,8 +51,8 @@ Converts ini-style keys into objects:
 **Example 1**
 
 ```js
-var parse = require('parse-git-config');
-var config = { 
+const parse = require('parse-git-config');
+const config = { 
   'foo "bar"': { doStuff: true },
   'foo "baz"': { doStuff: true } 
 };
@@ -74,8 +74,8 @@ Results in:
 **Example 2**
 
 ```js
-var parse = require('parse-git-config');
-var config = {
+const parse = require('parse-git-config');
+const config = {
   'remote "origin"': { 
     url: 'https://github.com/jonschlinkert/normalize-pkg.git',
     fetch: '+refs/heads/*:refs/remotes/origin/*' 
