--- a/.verb.md
+++ b/.verb.md
@@ -4,28 +4,35 @@
 const parse = require('{%= name %}');
 
 // sync
-const config = parse.sync();
+console.log(parse.sync());
 
-// or async
-parse(function (err, config) {
-  // do stuff with err/config
-});
+// using async/await
+(async () => console.log(await parse()))();
 ```
 
-**Custom path and/or cwd**
+## Options
 
-```js
-parse.sync({cwd: 'foo', path: '.git/config'});
+### cwd
 
-// async
-parse({cwd: 'foo', path: '.git/config'}, function (err, config) {
-  // do stuff 
-});
-```
+The starting directory to search from.
 
-**Example result**
+**Type**: `string`
 
-Config object will be something like:
+**Default**: `process.cwd()` (current working directory)
+
+
+### path
+
+Either the absolute path to .git `config`, or the path relative to the current working directory.
+
+**Type**: `string`
+
+**Default**: `.git/config`
+
+
+### Examples config object
+
+Parsed config object will look something like:
 
 ```js
 { core:
@@ -44,7 +51,7 @@ Config object will be something like:
 ## API
 {%= apidocs('index.js') %}
 
-### .keys examples
+### .expandKeys examples
 
 Converts ini-style keys into objects:
 
@@ -57,7 +64,7 @@ const config = {
   'foo "baz"': { doStuff: true } 
 };
 
-console.log(parse.keys(config));
+console.log(parse.expandKeys(config));
 ```
 
 Results in:
@@ -91,7 +98,7 @@ const config = {
   }
 };
 
-console.log(parse.keys(config));
+console.log(parse.expandKeys(config));
 ```
 
 Results in:
